--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -214,7 +214,7 @@ Albstadt-Sigmaringen University, Germany \\
 \begin{abstract}
 
 For data practitioners embracing the world of RDF and Linked Data, the openness and flexibility is a mixed blessing. For them, data validation according to predefined constraints is a  much sought-after feature, particularly as this is taken for granted in the XML world. Several approaches exist to meet this requirement, ranging from using OWL as a constraint language to SPIN, a SPARQL-based way to formulate and check constraints. There are also specific constraint languages like Shape Expressions, Resource Shapes or Description Set Profiles that more or less explicitly address the aforementioned data practitioners.
-In this paper, we investigate the relationship of validation and reasoning and the role that reasoning plays in practical data validation. We formulate common types of constraints in Description Logic and use this formulation to determine their complexity when certain reasoning steps are involved. At last, we aggregate these findings for the most common constraint languages and show their commonalities and differences regarding constraint expressivity. We argue that so far no single best solution exists and that the results presented in this paper are crucial for a proper application of RDF validation.
+In this paper, we investigate the relationship of validation and reasoning and the role that reasoning plays in practical data validation. We formulate common types of constraints in Description Logic and use this formulation to determine their possible complexity when certain reasoning steps are involved. At last, we aggregate these findings for the most common constraint languages and show their commonalities and differences regarding constraint expressivity. We argue that so far no single best solution exists and that the results presented in this paper are crucial for a proper application of RDF validation.
 
 
 % There is no standard way to formulate RDF constraints for validation,
@@ -279,14 +279,14 @@ Requirements are classified to provide a high-level view on different solutions 
 Rdf validation gained speed as a research field in recent years, as a result of common needs.  For instance, libraries are used to publish data in form of XML documents for a long time.
 They model and validate data using quite complex and very detailed XML Schemas, DTDs, RELAX NG, or Schematron.
 Recently, libraries started to publish RDF data sets, since libraries have many use cases which are met by Semantic Web technologies and Linked Data. 
-A library wants to publish some data sets as RDF by extracting them from different relational databases. 
+One possible case as such: a library needs to publish some data sets as RDF by extracting them from different relational databases. 
 In order to achieve high data quality some constraints are defined first on a very
 generic level written down in some natural language sentences.  
-Now it needs to be decided which formalism to use in order to formally express
+Now it needs to be decided which constraint language to use in order to formally express
 these constraints and to check their validity. 
 It is often needed to declare properties of given classes as mandatory.  
 Publications, for instance, must have publishing dates.
-Another common constraint is that literals of particular properties (e.g., ISBN identifiers) must correspond to some pattern.
+Another common constraint is that literals of particular properties (e.g., ISBN identifiers) must correspond to some pattern, etc.
 
 % constraint languages
 % -----
@@ -312,20 +312,22 @@ Their relevance varies with respect to several foremost criteria in the validati
 %stated.
 
 A major shortcoming when validating RDF data is redundancy.
-\emph{Reasoning} seems to be a promising solution as pre-validation step to overcome this shortcoming. Reasoning (logical) is used in order to make the implicit knowledge explicit  {e.g., \emph{modus ponens}, books are publications, \em Foundations of Semantic Web Technologies} is a book, and therefore it is a publication) in many different forms. 
-Reasoning can be used to recognize impossibilities 
-(conference proceedings are publications, the {\em ESWC 2014 proceedings} are conference proceedings but not a publication, therefore leading to a contradiction).
-Books, conference proceedings, and journal articles must have a publication date.
-When defining books, conference proceedings, and journal articles as sub-classes of publication, 
-we associate this constraint with the super-class publication and do not have to assign it to each of the publication sub-classes (which would lead to redundancy).
-When performing reasoning, it is inferred that instances of publication sub-classes are also publications which therefore must have a publication date
-(i.e., the constraint is also validated for instances of sub-classes).
-If we define that books must have at least one author, that publications must have at least one creator and that books are publications, books must also have at least one creator.
-Hence, we need to define authors as well as creators for books having identical values (which leads to redundancy).
-If we define {\em author} to be a sub-property of {\em creator} and if we relate a book to an author, the {\em creator} relationship is inferred when performing reasoning.
-As a consequence, reasoning resolves constraint violations when book creators are not stated explicitly. 
-If we define {\em editor} as a sub-property of {\em creator}, {\em creator} relationships can be inferred when conference proceedings and journal volumes (which are publications) have {\em editor} relationships.
+\emph{Reasoning} seems to be a promising solution as pre-validation step to overcome this shortcoming. Reasoning in Semantic Web, refers to the operational process of making the implicitly available knowledge explicitly available  e.g.,  assume that we know ``books are publications" and ``{\em Proof Theory} is a book", now we can derive implicitly available knowledge ``\emph{Proof Theory} is a publication" and make it explicit by adding to the list of \emph{what is known} \footnote{The list of \emph{what is known} or \emph{facts}  as a collection of formal statements in a formal language is generally referred to as a \emph{knowledge base}.}.
 
+
+Reasoning are also used to detect contradictions   
+(e.g., ``conference proceedings are publications", ``the {\em ESWC 2014 proceedings} are conference proceedings but not a publication", which would in return yield a contradiction).
+
+%Books, conference proceedings, and journal articles must have a publication date.
+%When defining books, conference proceedings, and journal articles as sub-classes of publication, 
+%we associate this constraint with the super-class publication and do not have to assign it to each of the publication sub-classes (which would lead to redundancy).
+%When performing reasoning, it is inferred that instances of publication sub-classes are also publications which therefore must have a publication date
+%(i.e., the constraint is also validated for instances of sub-classes).
+%If we define that books must have at least one author, that publications must have at least one creator and that books are publications, books must also have at least one creator.
+%Hence, we need to define authors as well as creators for books having identical values (which leads to redundancy).
+%If we define {\em author} to be a sub-property of {\em creator} and if we relate a book to an author, the {\em creator} relationship is inferred when performing reasoning.
+%As a consequence, reasoning resolves constraint violations when book creators are not stated explicitly. 
+%If we define {\em editor} as a sub-property of {\em creator}, {\em creator} relationships can be inferred when conference proceedings and journal volumes (which are publications) have {\em editor} relationships.
 %-----
 %
 %OWL as constraint language / CWA vs. OWA
@@ -333,15 +335,17 @@ If we define {\em editor} as a sub-property of {\em creator}, {\em creator} rela
 %OWL is a reasoning language but is also used for validation and because of this leads to this discussion
 %
 %-----
+OWL is an expressive semantic web language which  is mainly praised for its reasoning capabilities in semantic web community. The knowledge representation formalism {\em Description logics} (DL), with its  well-studied theoretical properties, provides the foundational basis for OWL. Furthermore, DL can be used to express constraints (1) publications must have at least 1 author which must be a Person (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}) and
+(2) books, conference proceedings, and journal articles are publications (\ms{Book $\sqcup$ ConferenceArticle $\sqcup$ JournalArticle $\sqsubseteq$ Publication}). For that reason, in our work, we map constraint types to DL statements, in order to classify each constraint type according to some characteristics concerning semantics, reasoning, and expressivity, as well as to determine the capabilities of constraint languages in those manners.
 
-{\em Description logics} (DL) is a family of formal knowledge representation languages which corresponds to decidable fragments of First-Order Logic. It is the foundational basis for the well-known semantic web language OWL. 
-DL can be used to specify constraints such as 
-(1) publications must have at least 1 author which must be a Person (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}) and
-(2) books, conference proceedings, and journal articles are publications (\ms{Book $\sqcup$ ConferenceArticle $\sqcup$ JournalArticle $\sqsubseteq$ Publication}).
-We map each constraint type to DL to classify constraint types according to semantics, reasoning, and complexity and 
-to determine the expressivity of constraint languages.
 
-This paper addresses two main \textbf{audiences}: 
+
+
+
+
+
+
+This paper aims to address two main \textbf{audiences}: 
 (1) metadata practitioners seeking for the role of reasoning for validation and
 (2) reasoning experts to raise the awareness for practical applications on validation.
 The \textbf{contributions} of this paper are
@@ -350,7 +354,7 @@ The \textbf{contributions} of this paper are
 (3) to explain the effects of reasoning on the computational complexity of typical constraint types, and
 (4) to evaluate the constraint type specific expressivity of constraint languages.
 
-The remainder of the paper is structured as follows.
+The remainder of the paper is as follows.
 In section \ref{the-role-of-reasoning-for-rdf-validation}, we show why reasoning is important for validation and how reasoning and validation interact.
 In section \ref{classification-rdf-constraints}, we classify RDF constraints according to CWA/UNA dependency, reasoning, and complexity.
 In section \ref{classification-constraint-languages}, we investigate the expressivity of constraint languages. 
@@ -661,7 +665,7 @@ There have been long and controversial discussions\footnote{\url{http://lists.w3
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
 In practice, OWL 2 is well-spread and RDFS/OWL constructs are widely used to tell people and applications about how valid instances should be created.
 RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy.
-Consider the following DL knowledge base $\mathcal{K}$\footnote{A  knowledge base is a collection of formal statements which corresponds to \emph{facts} or  \emph{what is known}.}:
+Consider the following DL knowledge base $\mathcal{K}$:
 \begin{center}
 \begin{DL} 
 $\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ title.$\top$}, \ms{Book $\sqsubseteq \forall$ author.Person }\\
