--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -358,9 +358,19 @@ The data is valid, if \emph{The-Lord-Of-The-Rings} is connected to a \emph{perso
 The following table shows the mapping between the cardinality restriction expressed in DL 
 and the cardinality restriction expressed by our developed vocabulary to describe any RDF constraint generically (see section~\ref{sec:ontology}):
 
-\begin{gcotable}
-property & Publication & author & - & Person & $\geq$ & 1 \\
-\end{gcotable}
+\begin{table}
+  \scriptsize
+  \sffamily
+  \vspace{0cm}
+	\centering
+		\begin{tabular}{l|l|l|l|l|l|l}
+      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \hline
+      property & Publication & author & - & Person & $\geq$ & 1 \\
+		\end{tabular}
+	\caption{Property Constraint}
+	\label{tab:property-constraint}
+\end{table}
 
 According to this vocabulary, each constraint is either a constraint on classes or a constraint on properties.
 The generically expressed cardinality restriction is represented in RDF as follows:
@@ -394,85 +404,109 @@ FILTER ( ?c < ?cv ) .
 \label{sec:ontology}
 
 In order to develop a vocabulary to describe any RDF constraint generically, it is needed to define the terminology for the formulation of RDF constraints and to classify them. 
-A \emph{constraint language} is a language which is used to formulate constraints.
-The W3C Data Shapes working group defines \emph{RDF constraint} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
+A \textbf{\emph{constraint language}} is a language which is used to formulate constraints.
+The W3C Data Shapes working group defines \textbf{\emph{RDF constraint}} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
 We identified four dimensions to classify RDF constraints:
 \begin{itemize}
-  \item \emph{Universality:} specific constraints vs. generic constraints
-	\item \emph{Complexity:} simple constraints vs. complex constraints
-	\item \emph{Context:} property constraints vs. class constraints
-	\item \emph{DL Expressivity:} constraints expressible in DL vs. constraints not expressible in DL
+  \item \textbf{\emph{Universality:}} \emph{specific constraints} vs. \emph{generic constraints}
+	\item \textbf{\emph{Complexity:}} \emph{simple constraints} vs. \emph{complex constraints}
+	\item \textbf{\emph{Context:}} \emph{property constraints} vs. \emph{class constraints}
+	\item \textbf{\emph{DL Expressivity:}} \emph{constraints expressible in DL} vs. \emph{constraints not expressible in DL}
 \end{itemize}
 
 As there are already five promising constraint languages, our purpose is not to invent a new constraint language.
 We rather developed a very simple vocabulary (only three classes, three object properties, and three data properties) which is universal enough to describe any RDF constraint\footnote{Bosch et al. identified in total 74 requirements to formulate RDF constraints; each of them corresponds to a constraint type \cite{BoschNolleAcarEckert2015}} expressible by any constraint language (see the conceptual model in figure \ref{fig:RDF-CV-conceptual-model}).
-We call this vocabulary the \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}}.
+We call this vocabulary the \textbf{\emph{RDF Constraints Vocabulary (RDF-CV)}}\footnote{Available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}}.
 
 \begin{figure}
 	\centering
 		\includegraphics[width=0.80\textwidth]{images/RDF-CV-conceptual-model.png}
-	\caption{RDF Constraints Vocabulary (RDF-CV) - conceptual model}
+	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} - conceptual model}
 	\label{fig:RDF-CV-conceptual-model}
 \end{figure}
 
-The \emph{RDF-CV} represents \emph{generic constraints} and \emph{specific constraints} are expressed by specific constraint languages.
+The \emph{RDF-CV} represents \textbf{\emph{generic constraints}} and \textbf{\emph{specific constraints}} are expressed by specific constraint languages.
 As the RDF-CV describes constraints generically, the \emph{RDF-CV} does not distinguish constraints according to the dimension \emph{universality}. 
 The majority of constraints can be expressed in DL.
 In contrast, there are constraints which cannot be expressed in DL, but are also representable by the \emph{RDF-CV} (see section \ref{sec:evaluation}). 
-\emph{Complex constraints} encompass \emph{simple constraints} (atomic constraints) and/or further \emph{complex constraints},
+\textbf{\emph{Complex constraints}} encompass \textbf{\emph{simple constraints}} (atomic constraints) and/or further \emph{complex constraints},
 i.e. DL statements representing \emph{complex constraints} are created out of DL statements standing for composed constraints (if expressible in DL). 
-Simple constraints may be applied to either properties (\emph{property constraints}) or classes (\emph{class constraints}).
+Simple constraints may be applied to either properties (\textbf{\emph{property constraints}}) or classes (\textbf{\emph{class constraints}}).
 There are no terms standing for \emph{simple} and \emph{complex constraints} in the \emph{RDF-CV}, since \emph{context classes} of \emph{simple constraints} may just be reused within further \emph{complex constraints} (\emph{simple constraints} associated with \emph{context classes} must hold for individuals of these \emph{context classes}).
 As a consequence, the distinction of \emph{property} and \emph{class constraints} is sufficient to describe all possible RDF constraint types.
 
 \subsection{Simple Constraints (Expressible in DL)}
 
-Sub-classes of \ms{simple constraints} are \ms{property constraints} and \ms{class constraints} (see the RDF-CO implementation model in figure \ref{fig:RDF-CV-implementation-model}). 
-For both property and class constraints a context class, a list of classes, the constraining element, and the constraining value can be stated. 
-Lists of left and right properties can only be stated for property constraints.
+Sub-classes of \textbf{\emph{simple constraints}} are \textbf{\emph{property constraints}} and \textbf{\emph{class constraints}} (see the \emph{RDF-CV} implementation model in figure \ref{fig:RDF-CV-implementation-model}). 
+For both \emph{property} and \emph{class constraints} a \emph{context class}, a list of \emph{classes}, the \emph{constraining element}, and the \emph{constraining value} can be stated. 
+Lists of \emph{left} and \emph{right properties} can only be stated for \emph{property constraints}.
 
 \begin{figure}
 	\centering
 		\includegraphics[width=0.70\textwidth]{images/RDF-CV-implementation-model.png}
-	\caption{RDF Constraints Vocabulary (RDF-CV) - implementation model}
+	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} - implementation model}
 	\label{fig:RDF-CV-implementation-model}
 \end{figure}
 
-A constraint holds for all individuals of a context class (\ms{contextClass}).
-Consider, e.g., the following cardinality restriction on the property \ms{commandsVessel}, which restricts Starfleet captains to command at least one vessel: 
+A constraint holds for all individuals of a \emph{context class} (\textbf{\emph{contextClass}}).
+Consider, e.g., the following minimum qualified cardinality restriction on the object property \emph{author}, which restricts \emph{publications} to have at least one \emph{author} which is a \emph{person}: 
 \begin{DL}
-$StarfleetCaptain \sqsubseteq \geq1 commandsVessel . Vessel $
+$Publication \sqsubseteq \geq1 author . Person $
 \end{DL}
-Mapped to the RDF-CO the cardinality restriction is classified as a property constraint which holds for individuals of the class \ms{StarfleetCaptain}:
-\begin{gcotable}
-property & StarfleetCaptain & commandsVessel & - & Vessel & $\geq$ & 1 \\
-\end{gcotable}
-The constraining element (\ms{constrainingElement}) indicates the actual type of constraint like DL concept and role constructors, (in)equality, and further keywords for constrains which cannot be expressed in DL (e.g. regular expressions and constraining facets).
-In some cases, a constraint is only complete when in addition to the constraining element a constraining value (\ms{constrainingValue}) is stated.
+Mapped to the \emph{RDF-CV}, the cardinality restriction is classified as a \emph{property constraint} which holds for all individuals of the class \emph{Publication}:
+
+\begin{table}
+  \scriptsize
+  \sffamily
+  \vspace{0cm}
+	\centering
+		\begin{tabular}{l|l|l|l|l|l|l}
+      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \hline
+      property & Publication & author & - & Person & $\geq$ & 1 \\
+		\end{tabular}
+	\caption{Property Constraint - Cardinality Restriction}
+	\label{tab:property-constraint-cardinality-restriction}
+\end{table}
+
+The \emph{constraining element} (\textbf{\emph{constrainingElement}}) indicates the actual type of constraint like DL concept and role constructors, (in)equality, and further keywords for constraint types which cannot be expressed in DL (e.g. regular expressions and constraining facets).
+In some cases, a constraint is only complete when in addition to the \emph{constraining element} a \emph{constraining value} (\textbf{\emph{constrainingValue}}) is stated.
 The cardinality restriction 
-\ms{$\geq$1 commandsVessel.Vessel}
-constructs an anonymous class of all individuals who command at least one vessel.
-Thus, the constraining element of this property constraint is the DL at-least restriction \ms{$\geq$} and the constraining value is \ms{1}.
-\ms{Classes} indicate the list of classes, constraints refer to.
-The qualified cardinality restriction refers to the class \ms{Vessel}, 
-i.e., restricting the objects, the property \ms{commandsVessel} points to, to be of the class \ms{Vessel}.
+\ms{$\geq$1 author.Person}, e.g., 
+constructs an anonymous class of all individuals having at least one \emph{author} relationship to \emph{persons}.
+The \emph{constraining element} of this \emph{property constraint} is the DL at-least restriction \emph{$\geq$} and the \emph{constraining value} is \emph{1}.
+\textbf{\emph{Classes}} indicate the list of classes, constraints refer to.
+The qualified cardinality restriction above, e.g., refers to the class \emph{Person}, 
+i.e. restricts the objects, the property \emph{author} points to, to be of the class \emph{Person}.
 
-For property constraints, left and right property lists (\ms{leftProperties}, \ms{rightProperties}) can be specified.
-The assignment of properties to these lists happens relative to the constraining element - which may be an operator (e.g. $\sqsubseteq$ in case of object property paths).
-\ms{Object Property Paths}\footnote{corresponds to the requirement \ms{R-55-OBJECT-PROPERTY-PATHS}} (also called complex role inclusion axioms in DL terminology)
-state that, if an individual x is connected by a sequence of object properties with an individual y, 
-then x is also connected with y by a particular object property. 
-According to the following object property path and some instance data, lieutenant commander \ms{Data} is commanded by captain \ms{Picard} 
-(as \ms{Data} is commanded by commander \ms{Riker} who is commanded by captain \ms{Picard}):
+For \emph{property constraints}, \emph{left} and \emph{right property lists} (\textbf{\emph{leftProperties}}, \textbf{\emph{rightProperties}}) are specified.
+The assignment of properties to these lists happens relative to the \emph{constraining element} - which may be an operator (e.g. $\sqsubseteq$ in case of object property paths).
+\emph{Object Property Paths}\footnote{corresponds to the requirement \emph{R-55-OBJECT-PROPERTY-PATHS}} (also called \emph{complex role inclusion axioms} in DL terminology)
+state that, if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
+then \emph{x} is also connected with \emph{y} by a particular object property. 
+According to the following object property path and some instance data, \emph{Stephen-Hawking} is an author of the genre \emph{Popular-Science} 
+(as \emph{Stephen-Hawking} is an author of the book \emph{A-Brief-History-Of-Time} whose genre is \emph{Popular-Science}):
+
 \begin{DL}
-commandedByCommander $\circ$ commandedByCaptain $\sqsubseteq$ commandedByCaptain 
+authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre 
 \end{DL}
-When mapped to the RDF-CO, the properties \ms{commandedByCommander}, \ms{commandedByCaptain} are on the left side of the constraining element \ms{$\sqsubseteq$},
-and the property \ms{commandedByCaptain} is on the right side:
 
-\begin{gcotable}
-property & $\top$ & commandedByCommander, commandedByCaptain & commandedByCaptain & $\top$ & $\sqsubseteq$ & - \\
-\end{gcotable}
+When mapped to the \emph{RDF-CV}, the properties \emph{authorOf} and \emph{genre} are on the left side of the \emph{constraining element} \emph{$\sqsubseteq$},
+and the property \emph{authorOfGenre} is on the right side:
+
+\begin{table}
+  \scriptsize
+  \sffamily
+  \vspace{0cm}
+	\centering
+		\begin{tabular}{l|l|l|l|l|l|l}
+      \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+      \hline
+      property & $\top$ & authorOf, genre & authorOfGenre & $\top$ & $\sqsubseteq$ & - \\
+		\end{tabular}
+	\caption{Property Constraint - Object Property Paths}
+	\label{tab:property-constraint-object-property-paths}
+\end{table}
 
 \subsection{Simple Constraints (Not Expressible in DL)}
 
