--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -646,12 +646,12 @@ both \emph{property constraints} and \emph{class constraints} are \emph{simple c
 	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} Implementation Model}
 	\label{fig:RDF-CV-implementation-model}
 \end{figure}
-A \emph{simple constraint} holds for all individuals of their associated \emph{context class}.
-The \emph{minimum qualified cardinality restriction} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person,}}
-which restricts \emph{publications} to have at least one \emph{author} which must be a \emph{person},
-is an example of a \emph{property constraint} on \emph{author}
+A simple constraint holds for all individuals of their associated \emph{context class}.
+The \emph{minimum qualified cardinality restriction (R-75)} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person,}}
+which restricts publications to have at least one author which must be a person,
+is an example of a property constraint on \emph{author}
 which holds for all individuals of the class \emph{Publication}.
-Table \ref{tab:property-constraint-cardinality-restriction} displays how the \emph{property constraint} is generically represented using the \emph{RDF-CV}.
+Table \ref{tab:property-constraint-cardinality-restriction} displays how the property constraint is generically represented using the RDF-CV.
 \begin{table}[H]
   \scriptsize
   \sffamily
@@ -672,14 +672,11 @@ The \emph{constraining element} is an intuitive term which indicates the actual 
 
 If constraint types are expressible in DL, associated constraining elements are formally based on DL constructs like concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), equality (=), and inequality ($\ne$). In case constraint types cannot be expressed in DL such as \emph{data property facets (R-46)} or \emph{literal pattern matching (R-44)}, we reuse widely known terms from SPARQL (e.g., \emph{regex}) or XML Schema (e.g., \emph{minInclusive}) as constraining elements. For some constraint types like \emph{minimum qualified cardinality restrictions (R-75)}, it is more intuitive and concise to directly apply DL constructs like the \emph{at-least restriction} ($\geq$) as constraining elements. We provide a complete list of all constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}. 
 
-In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the \emph{constraining element}
-and \emph{simple constraints} may refer to a list of \emph{classes}.
-The \emph{constraining element} of the \emph{property constraint} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g.,  is the \emph{DL at-least restriction} \emph{$\geq$}, the \emph{constraining value} is \emph{1}, and
-the list of \emph{classes} includes the class \emph{Person} which restricts the objects of the property \emph{author} to be persons.
+In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the constraining element
+and simple constraints may refer to a list of \emph{classes}. The constraining element of the property constraint {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g., is \emph{$\geq$}, the constraining value is \emph{1}, and the list of classes includes the class \emph{Person} which restricts the objects of the property \emph{author} to be persons.
 
-For \emph{property constraints}, \emph{left} and \emph{right property lists} are specified.
-The assignment of properties to these lists happens relative to the \emph{constraining element} 
-which may be a DL operator like $\sqsubseteq$.
+For property constraints, \emph{left} and \emph{right property lists} are specified.
+The assignment of properties to these lists happens relative to the constraining element.
 \emph{Object Property Paths} (\emph{R-55})
 ensure that if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
 then \emph{x} is also related to \emph{y} by a particular object property. 
@@ -689,9 +686,8 @@ whose genre is \emph{Popular-Science},
 %{\small\ms{(genre(A-Brief-History-Of-Time, Popular-Science)),}}
 the object property path {\small\ms{authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre}} infers that \emph{Stephen-Hawking} is an author of the genre \emph{Popular-Science}. 
 %{\small\ms{(authorOfGenre(Stephen-Hawking, Popular-Science))}.}
-Thus, when representing the \emph{property constraint} using the \emph{RDF-CV} (see Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are placed on the left side of the \emph{constraining element} \emph{$\sqsubseteq$}
-and the property \emph{authorOfGenre} on its right side.
-As this \emph{property constraint} holds for all individuals within the data, the \emph{context class} is set to the \emph{DL top concept} $\top$ which stands for the super-class of all classes.
+Thus, when representing the property constraint using the RDF-CV (see Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are placed on the left side of the constraining element \emph{property paths}
+and the property \emph{authorOfGenre} on its right side. As this property constraint holds for all individuals within the data, the context class is set to the \emph{DL top concept} $\top$ which stands for the super-class of all possible classes.
 \begin{table}[H]
   \scriptsize
   \sffamily
@@ -702,14 +698,11 @@ As this \emph{property constraint} holds for all individuals within the data, th
 		\begin{tabular}{l|l|l|l|l|l|l}
       \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
-      property & $\top$ & authorOf, genre & authorOfGenre & $\top$ & $\sqsubseteq$ & - \\
+      property & $\top$ & authorOf, genre & authorOfGenre & $\top$ & property paths & - \\
 		\end{tabular}
 \end{table}
 
-There are \emph{simple constraints} which are not expressible in DL but can still be described using the \emph{RDF-CV} 
-such as constraints of the type \emph{literal pattern matching} (\emph{R-44}) which restrict literals to match given patterns.
-The \emph{universal restriction} {\small\ms{Book $\sqsubseteq$ $\forall$ identifier.ISBN}} ensures that \emph{books} can only have valid \emph{ISBN} identifiers, 
-i.e., strings that match a given regular expression.
+There are simple constraints which are not expressible in DL but can still be described using the RDF-CV such as constraints of the type \emph{literal pattern matching} (\emph{R-44}) which restrict literals to match given patterns. The \emph{universal quantification (R-91)} {\small\ms{Book $\sqsubseteq$ $\forall$ identifier.ISBN}} ensures that \emph{books} can only have valid \emph{ISBN} identifiers, i.e., strings that match a given regular expression.
 %Even though, the restriction of the datatype \emph{ISBN} cannot be expressed in DL, \emph{OWL 2 DL} can be used to express the \emph{literal pattern matching} constraint:
 %\begin{ex}
 %ISBN a RDFS:Datatype ; owl:equivalentClass [ a RDFS:Datatype ;
@@ -737,13 +730,7 @@ i.e., strings that match a given regular expression.
 %The \emph{literal pattern matching} constraint validates \emph{ISBN} literals according to the regular expression causing constraint violations for triples which do not not match. 
 %\ms{Janeway commandsEnterprise Voyager} and \ms{Voyager registryNumber "NCC-74656"\textasciicircum{}\textasciicircum{}RegistryNumber}, 
 %but not for the triples \ms{Picard commandsEnterprise Enterprise} and \ms{Enterprise registryNumber "NCC-1701-E"\textasciicircum{}\textasciicircum{}RegistryNumber}.
-Table \ref{tab:simple-constraint-not-expressible-in-dl)} presents 
-(1) how the \emph{literal pattern matching} \emph{simple constraint} which is not expressible in DL and 
-(2) how the \emph{universal restriction} \emph{complex constraint} which is expressible in DL are represented using the \emph{RDF-CV}.
-Thereby, the \emph{context class} \emph{ISBN}, whose instances must satisfy the \emph{simple constraint}, 
-is reused within the list of \emph{classes} the \emph{complex constraint} refers to.
-The \emph{literal pattern matching} constraint type introduces the \emph{constraining element} \emph{regex}
-whose validation has to be implemented once like for any other \emph{constraining element}.
+Table \ref{tab:simple-constraint-not-expressible-in-dl)} presents (1) in the first line how the literal pattern matching simple constraint which is not expressible in DL and (2) in the second line how the universal quantification complex constraint which is expressible in DL are represented using the RDF-CV. Thereby, the context class \emph{ISBN}, whose instances must satisfy the simple constraint, is reused within the list of classes the complex constraint refers to. The literal pattern matching constraint type introduces the constraining element \emph{regex} whose validation has to be implemented once like for any other constraining element.
 %In general, validation has to be implemented once for each \emph{generic constraint type} which is not expressible in DL. 
 %\begin{gcotable}
 %property & Enterprise & registryNumber & - & RegistryNumber & $\forall$ & - \\
@@ -760,7 +747,7 @@ whose validation has to be implemented once like for any other \emph{constrainin
       \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
       class & ISBN & - & - & xsd:string & regex & '\string^\text{$\backslash$d$\{9\}$[$\backslash$d$\mid$X]}\$' \\
-      property & Book & identifier & - & ISBN & $\forall$ & - \\
+      property & Book & identifier & - & ISBN & universal quantification & - \\
 		\end{tabular}
 \end{table} %\tb{Erman, can you please format the regular expression in the table above correctly?}
 
@@ -899,8 +886,8 @@ As a consequence, the \emph{context-specific exclusive or of property groups} \e
       \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
 class & Publication & - & - & E, F & XOR \\
-class & E & - & - & A, B & $\sqcap$ \\
-class & F & - & - & C, D & $\sqcap$ \\
+class & E & - & - & A, B & intersection \\
+class & F & - & - & C, D & intersection \\
 property & A & isbn & - & string & = & 1 \\
 property & B & title & - & string & = & 1 \\
 property & C & issn & - & string & = & 1 \\
@@ -985,8 +972,8 @@ which can be represented using the \emph{RDF-CV} in form of a \emph{complex cons
 		\begin{tabular}{l|l|l|l|l|l|l}
       \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
-property & $\top$ & isbn$^{-}$ & isbn$^{-}$ & - & inverse & - \\
-property & Book & isbn$^{-}$ & - & - & functional & - \\
+property & $\top$ & isbn$^{-}$ & isbn$^{-}$ & - & inverse property & - \\
+property & Book & isbn$^{-}$ & - & - & functional property & - \\
 		\end{tabular}
 \end{table}
 
